--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,11 @@ dependencies = [
     "langchain-community (>=0.3.27,<0.4.0)",
     "selenium (>=4.34.2,<5.0.0)",
     "webdriver-manager (>=4.0.2,<5.0.0)",
-    "beautifulsoup4 (>=4.13.4,<5.0.0)"
+    "beautifulsoup4 (>=4.13.4,<5.0.0)",
+    "google-api-python-client (>=2.177.0,<3.0.0)",
+    "langchain-google-community (>=2.0.7,<3.0.0)",
+    "arxiv (>=2.2.0,<3.0.0)",
+    "pymupdf (>=1.26.3,<2.0.0)",
 ]
 
 [tool.poetry]
