--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,11 @@ dependencies = [
     "langchain-google-community (>=2.0.7,<3.0.0)",
     "arxiv (>=2.2.0,<3.0.0)",
     "pymupdf (>=1.26.3,<2.0.0)",
+    "docxtpl",
 ]
 
 [tool.poetry]
-packages = [{include = "ksebj_chat_bot_server", from = "src"}]
-
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
